Fixed section spacing / responsiveness

--- a/styles/sass/_instagram.scss
+++ b/styles/sass/_instagram.scss
@@ -27,7 +27,7 @@ height: 100%;
 
 .instagramImages img {
     width: 90%;
-    padding: 50px 0;
+    padding: 25px 0;
 }
 
 
