--- a/styles/style.css
+++ b/styles/style.css
@@ -799,6 +799,7 @@ nav a:hover:after {
 
 .instagramImages img {
   width: 90%;
+  padding: 25px 0;
 }
 
 @media (max-width: 1605px) {
